# diffbot_sim

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml
launch/: bringup_navigation.py  navigation_launch.py  sim.launch.py
urdf/: robot.xacro.urdf
worlds/: house.world  living_room.world  room.world
