<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_sim</name>
  <version>0.0.0</version>
  <description>4Wheel DiffDrive Robot Gazebo Simulation</description>
  <maintainer email="nakoyonioka@todo.todo">nakoyonioka</maintainer>
  <license>Apache 2.0</license>

  <build_depend>ament_python</build_depend>

  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>navigation2</depend>
  <depend>slam_sim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>